Adiciona classe no HTML e CSS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,3 +19,6 @@ body{
         margin-bottom: 20px; /*margem abaixo do elemento */
         margin: 20px;
     }
+    .img_padrao{
+        margin-bottom:0px;
+    }
